task-1 alignment correction

--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -36,18 +36,21 @@ body {
 }
 #main-container {
   background-color: #d1d8e8;
-  height: 310px;
+  height: 250px;
   margin-top: 15px;
   margin-bottom: 15px;
   padding: 15px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 .boxes {
   background-color: #d1d8e8;
-  width: 31%;
+  width: 31.5%;
   height: 200px;
-  padding: 10px;
+  padding: 1px;
   float: left;
+  margin-left: 10px;
 }
 .m-r {
-  margin-right: 16.5px;
+  margin-right: 15px;
 }
