--- a/task-4/css/style.css
+++ b/task-4/css/style.css
@@ -139,7 +139,7 @@ body {
   border-radius: 50%;
   display: flex;
   justify-content: center;
-  background-color: #ff7262;
+  background-color: #ff7261;
   padding: 5px;
 }
 .inner-four {
